# qdrant-essesials

./: .env.example  CLAUDE.md  docker-compose.yml  pyproject.toml
src/: __init__.py
src/day_five/: recommendation.ipynb
src/day_four/: dataset.py  quantization.ipynb
src/day_one/: __init__.py  movie_recommendation.ipynb
src/day_three/: drug_search.ipynb
src/day_three/dataset/: dataset.py
src/day_three/models/: general.py
src/day_three/vector_db/: collectionable.py  qdrant_wrapper.py
src/day_three/vector_db/sparse_point/: strategies.py
src/day_two/: __init__.py  movie_recommendation_benchmark.ipynb
src/day_zero/: __init__.py  app.py  challange.ipynb  notebook.ipynb
src/models/: __init__.py  movie_models.py
src/movie_recommendation/: __init__.py  chunking.py  dataset.py  point_builder.py  search.py  visualization.py
src/utils/: __init__.py  urlbuilder.py
