[project]
name = "qdrant-essentials"
version = "0.1.0"
description = ""
authors = [
    {name = "havenousername",email = "andrei.cristea997@gmail.com"}
]
readme = "README.md"
requires-python =  ">=3.14,<3.15"
dependencies = [
    "qdrant-client (>=1.18.0,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "sentence-transformers (>=5.5.1,<6.0.0)",
    "transformers (>=5.9.0,<6.0.0)",
    "llama-index-core (>=0.14.22,<0.15.0)",
    "llama-index-embeddings-huggingface (>=0.7.0,<0.8.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "wikipedia-api (>=0.15.0,<0.16.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "regex (>=2025.10.22)",
    "Pillow (>=12.0.0,<13.0.0)",
    "fastembed (>=0.8.0,<0.9.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false   # duck typing: don't yell about missing stubs
useLibraryCodeForTypes = true